fixed responsibility for mobile devices

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <title>Memory Maze Escape - Igra</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body data-theme="light">
+  <body data-theme="light" class="game-body">
     <div class="container game-container">
       <div class="game-ui">
         <span>Nivo: <span id="level-display">1</span></span>
