added functionality for turning the sound on and off

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <button id="leaderboard-btn">Leaderboard</button>
         <button id="achievements-btn">Dostignuća</button>
         <button id="reset-progress-btn">Resetuj Progres</button>
-        <!-- New Button -->
         <button id="logout-btn">Odjavi se</button>
+        <!-- Dugme za zvuk -->
+        <button id="toggle-sound-btn" class="sound-toggle">🔊</button>
         <p id="menu-message" class="message"></p>
         <!-- Optional message area for reset confirmation -->
       </div>
